--- a/config.json.sample
+++ b/config.json.sample
@@ -1,6 +1,6 @@
 {
     "port": 3000,
-    "apiKey": "Get this and your secret by registering for tokbox.com",
-    "apiSecret": "",
-    "chromeExtensionId": "Get this from https://github.com/opentok/screensharing-extensions"
+    "apiKey": "46574382",
+    "apiSecret": "208f7bfedc64c8058df5085eb34ce91525cc22be",
+    "chromeExtensionId": "cgjfblkibikdpjcbobmnfdoofombmigo"
 }
